Refactor: Added video service and improved VideoPlayer with loading spinner getting the video url from the backend
